# Adjacent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  makefile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/demo/: README.md
data/demo/: kaggle_ecommerce.json
docs/: SETUP_GUIDE.md  api.md  async_architecture.md  graph_convergence.md  mcp.md  mcp_assessment.md  metrics.md  personal_readme.md  system_dynamics.md
monitoring/: FIX_SUMMARY.md  README.md  promtail-config.yml
schemas/: edge.json  edge_patch.json  llm_product_view.json  metrics_event.json  product.json  product_runtime.json
scripts/: analyze_metrics.py  baseline_metrics.py  check_monitoring.sh  preprocess_demo.py  setup.sh
simulate/v1_random_sample/: README.md  run.py
src/adjacent/: recommender.py
src/adjacent/api/: __init__.py  app.py  routes.py
src/adjacent/async_inference/: __init__.py  config.py  query_service.py  tasks.py
src/adjacent/db/: __init__.py  neo4j_context.py  serialization.py
src/adjacent/embeddings/: __init__.py  providers.py  service.py
src/adjacent/graph/: __init__.py  embed.py  ingest.py  io.py  materializer.py  normalize.py  validate.py
src/adjacent/llm/: __init__.py  edge_inference.py  views.py
src/adjacent/mcp/: README.md  __init__.py  claude_desktop_config.example.json  config.py  server.py
src/commons/: identity.py  logging_config.py  loki_handler.py  metrics.py  utils.py
(+7 files in other folders)
