[project]
name = "adjacent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "check-jsonschema>=0.30.0",
    "jsonschema>=4.26.0",
    "neo4j>=5.27.0,<6.0.0",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adjacent", "src/commons"]